# typetest

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  analyse  cli.py  common_1000  common_300  curses-toend.py  keytype.py  pyproject.toml  requirements.txt  results  setup.py  tt.py  typetest  typetest.py  utils.py  wiki  wiki.py  wiki_common
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: default_template.md
.github/workflows/: format-code.yml  lint-pr.yml  run-tests.yml
cli/: cli.py  keytype.py
example_results/: char_speeds.csv  mistyped_words.csv  results.csv  word_speeds.csv
test/: __main__.py  test_analyse.py  test_utils.py
tests/: common_1000
tests/english/: basic
typetest/: __init__.py  __main__.py  analyse.py  cli.py  core.py  gui.py  keystrokes.py  test_analyse.py  util.py  utils.py
typetest/analyse/: __main__.py  mistyped_words_pie_chart.py  typing_speed_distribution.py  typing_speed_of_n_best_words.py  typing_speed_per_char.py  typing_speed_per_test.py  typing_speed_per_test_duration.py
typetest/tests/: no_double_letters
